# translating-machine

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/name_of_the_machine/: cli.py  config.py  machine.py
src/name_of_the_machine/providers/: depsek.py
src/translating_machine/: cli.py  config.py  githf.py  machina.yaml
src/translating_machine/providers/: camelids.py  castor_pollux.py  depsek.py  electroid.py  openai.py  qrog.py  strangelove.py
tests/: test_cli.py  test_e2e.py  test_llm_soup.py  test_utilities.py
